--- a/frontend/public/index.html
+++ b/frontend/public/index.html
@@ -20,7 +20,7 @@
     -->
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
 
-    <title>MESA | HOME</title>
+    <title>MESA</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
